Betting + адаптив + js

--- a/chempionat3.html
+++ b/chempionat3.html
@@ -215,7 +215,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="pointer">Прогнозы на теннис > Главная</div>
+          <div class="pointer">Прогнозы на теннис > NBA. Регулярный чемпионат</div>
         </div>
       </div>
 
@@ -255,11 +255,12 @@
 
         <div class="col-lg-4 col-12">
           <div class="betting__subscribe d-flex flex-column justify-content-center align-items-center">
-            <div class="betting__subscribe-title text-center">Оформить подписку <span>на бесплатные прогнозы</span></div>
+            <div class="betting__subscribe-title text-center">Оформить подписку <span>на бесплатные прогнозы</span>
+            </div>
 
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Ваш e-mail..."
-                aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control" placeholder="Ваш e-mail..." aria-label="Recipient's username"
+                aria-describedby="button-addon2">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2">Ok</button>
               </div>
@@ -971,7 +972,7 @@
 
                 <p>7 января 2017, 22:15 WTA</p>
               </div>
-            
+
               <div class="betting__news-item__img d-flex justify-content-center">
                 <img src="css/images/betting/news-1.jpg" alt="">
               </div>
