--- a/worldcup1.html
+++ b/worldcup1.html
@@ -30,7 +30,6 @@
         <div class="col-lg-8 col-md-11 col-12 offset-xl-0 offset-lg-1">
           <nav class="header__nav d-flex flex-sm-nowrap flex-wrap justify-content-sm-between justify-content-around">
             <a href="express.html" class="header__nav-link">Экспресс прогнозы</a>
-
             <a href="worldcup1.html" class="header__nav-link">ЧМ Австрии</a>
 
             <a href="worldcup2.html" class="header__nav-link">ЧМ Польши</a>
@@ -215,7 +214,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <div class="pointer">Прогнозы на теннис > Главная</div>
+          <div class="pointer">Прогнозы на теннис > ЧМ Австрии</div>
         </div>
       </div>
 
@@ -255,11 +254,12 @@
 
         <div class="col-lg-4 col-12">
           <div class="betting__subscribe d-flex flex-column justify-content-center align-items-center">
-            <div class="betting__subscribe-title text-center">Оформить подписку <span>на бесплатные прогнозы</span></div>
+            <div class="betting__subscribe-title text-center">Оформить подписку <span>на бесплатные прогнозы</span>
+            </div>
 
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="Ваш e-mail..."
-                aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control" placeholder="Ваш e-mail..." aria-label="Recipient's username"
+                aria-describedby="button-addon2">
               <div class="input-group-append">
                 <button class="btn btn-outline-secondary" type="button" id="button-addon2">Ok</button>
               </div>
@@ -971,7 +971,7 @@
 
                 <p>7 января 2017, 22:15 WTA</p>
               </div>
-            
+
               <div class="betting__news-item__img d-flex justify-content-center">
                 <img src="css/images/betting/news-1.jpg" alt="">
               </div>
